# equationpainter

./: .gitignore  .replit  LICENSE  README.md  SECURITY.md  i.icns  pyproject.toml  sailboat.toml  setup.py  testfile
.github/workflows/: sailboat.yml
equationpainter/: __init__.py  __main__.py  mainfile.py  secrets.json
equationpainter/web/: log.txt  main.html
examples/: big_cat.xlsx  merge2.xlsx  mergetest.xlsx  stingray.xlsx  test.xlsx
homebrew-taps/: EquationPainter.rb  EquationPainterfsdjfgksjdghfsjdkfgh.rb  Equation_Painter.rb  Sailboat.rb  Test_Project.rb  empty_project.rb
